--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,16 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <url>http://pik02.ii.pw.edu.pl:8080/manager/text</url>
+                    <server>TomcatServer</server>
+                    <path>/DatabaseManager</path>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 	
