--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,12 @@ spring.mvc.view.prefix = /WEB-INF/views/
 spring.mvc.view.suffix = .jsp
 
 #JPA, Hibernate configuration
-spring.datasource.url = jdbc:mysql://localhost:3306/databasemanager
-spring.datasource.username = username
+spring.datasource.url = jdbc:mysql://localhost:3306/mojabaza
+spring.datasource.username = tutorial
 spring.datasource.password = password
 
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
