#PIK-15 Working user creation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.mvc.view.prefix = /WEB-INF/views/
 spring.mvc.view.suffix = .jsp
 
 #JPA, Hibernate configuration
-spring.datasource.url = jdbc:mysql://localhost:3306/mojabaza
-spring.datasource.username = tutorial
-spring.datasource.password = password
+spring.datasource.url = jdbc:mysql://localhost:3306/databasemanager
+spring.datasource.username = root
+spring.datasource.password = 6e43c514dd
 
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = create
