--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>codemirror</artifactId>
+			<version>5.5</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-firefox-driver</artifactId>
 			<version>2.53.0</version>
