--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.webjars</groupId>
+			<artifactId>angularjs</artifactId>
+			<version>1.5.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
 			<artifactId>codemirror</artifactId>
 			<version>5.5</version>
 		</dependency>
